# update-qtile

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/backend/: arch.rs  debian.rs  mod.rs  uv.rs
