[package]
name = "update-qtile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94" }
clap = { version = "4.5.11", features = ["derive", "string"] }
git2 = { version = "0.19.0" }
glob = { version = "0.3.1" }
log = { version = "0.4.22" }
qtile-cmd-client = { git = "https://github.com/ervinpopescu/qtile-cmd-client" }
regex = { version = "1.11.1" }
serde_json = { version = "1.0.133" }
simple_logger = { version = "5" }
subprocess = { version = "0.2.9" }
text_io = { version = "0.1.12" }
